--- a/RobotArmControlGUI/MainWindow.xaml
+++ b/RobotArmControlGUI/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RobotArmControlGUI"
         mc:Ignorable="d"
-        Title="Robotic ARM Control Software" Height="833" Width="400" Background="#FF282828">
+        Title="Robotic ARM Control Software" Height="891" Width="400" Background="#FF282828">
     <Grid>
         <Slider x:Name="BaseSlider" HorizontalAlignment="Left" Margin="68,508,0,0" VerticalAlignment="Top" Width="248" SmallChange="10" Maximum="2500" Minimum="500" Value="1500" IsSnapToTickEnabled="True" Height="18" LargeChange="20" ValueChanged="BaseSlider_ValueChanged"/>
         <Slider x:Name="LowerHeightSlider" HorizontalAlignment="Left" Margin="298,242,0,0" VerticalAlignment="Top" Width="18" Orientation="Vertical" Height="195" SmallChange="10" Maximum="2500" Minimum="500" Value="1500" IsSnapToTickEnabled="True" LargeChange="20" ValueChanged="LowerHeightSlider_ValueChanged"/>
@@ -20,12 +20,17 @@
         <Label Content="Mid height" HorizontalAlignment="Left" Height="30" Margin="164,207,0,0" VerticalAlignment="Top" Width="71" Foreground="#FFBEBEBE"/>
         <Label Content="Top height" HorizontalAlignment="Left" Height="30" Margin="57,207,0,0" VerticalAlignment="Top" Width="67" Foreground="#FFBEBEBE"/>
         <Button x:Name="ConnectButton" Content="Connect" HorizontalAlignment="Left" Height="30" Margin="245,585,0,0" VerticalAlignment="Top" Width="105" Click="ConnectButton_Click"/>
-        <TextBox x:Name="ComTextbox" HorizontalAlignment="Left" VerticalContentAlignment="Center" Height="30" Margin="113,585,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="127" Background="#FF323232" Foreground="#FFBEBEBE"/>
+        <TextBox x:Name="ComTextbox" HorizontalAlignment="Left" VerticalContentAlignment="Center" Height="30" Margin="113,585,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="127" Background="#FF323232" Foreground="#FFBEBEBE" Text="COM"/>
         <Label Content="COM PORT: " HorizontalAlignment="Left" Height="30" Margin="34,585,0,0" VerticalContentAlignment="Center" Width="74" Foreground="#FFBEBEBE" VerticalAlignment="Top"/>
         <TextBlock x:Name="DebugTextblock" HorizontalAlignment="Left" Height="81" Margin="34,637,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="316" Foreground="#FFBEBEBE" Background="#FF343434"/>
-        <Button x:Name="ToggleAntAckInfoButton" Content="Show ANT__ACK info" HorizontalAlignment="Left" Height="30" Margin="235,743,0,0" VerticalAlignment="Top" Width="115" Click="ToggleAntAckInfoButton_Click"/>
-        <Button x:Name="ResetAntAckButton" Content="Reset" HorizontalAlignment="Left" Height="30" Margin="179,743,0,0" VerticalAlignment="Top" Width="40" Click="ResetAntAckButton_Click"/>
-        <Label x:Name="PacketsLabel" Content="Lost packets:" HorizontalAlignment="Left" Height="30" Margin="34,743,0,0" VerticalContentAlignment="Center" Width="79" Foreground="#FFBEBEBE" VerticalAlignment="Top"/>
-        <Label x:Name="AntAckFailCountLabel" Content="0" HorizontalAlignment="Left" Height="30" Margin="113,743,0,0" VerticalContentAlignment="Center" Width="53" Foreground="#FFBEBEBE" VerticalAlignment="Top"/>
+        <Button x:Name="ToggleTestsButton" Content="Show tests" HorizontalAlignment="Left" Height="30" Margin="245,743,0,0" VerticalAlignment="Top" Width="105" Click="ToggleTestsButton_Click"/>
+        <Button x:Name="ResetAntAckButton" Content="Reset" HorizontalAlignment="Left" Height="30" Margin="195,743,0,0" VerticalAlignment="Top" Width="40" Click="ResetAntAckButton_Click"/>
+        <Label x:Name="PacketsLabel" Content="Lost ANT packets:" HorizontalAlignment="Left" Height="30" Margin="34,743,0,0" VerticalContentAlignment="Center" Width="106" Foreground="#FFBEBEBE" VerticalAlignment="Top"/>
+        <Label x:Name="AntAckFailCountLabel" Content="0" HorizontalAlignment="Left" Height="30" Margin="145,743,0,0" VerticalContentAlignment="Center" Width="58" Foreground="#FFBEBEBE" VerticalAlignment="Top"/>
+        <Button x:Name="BeginTestButton" Content="Start test" HorizontalAlignment="Left" Height="30" Margin="245,820,0,0" VerticalAlignment="Top" Width="105" Click="TestButton_Click"/>
+        <TextBox x:Name="TimeTextbox" HorizontalAlignment="Left" VerticalContentAlignment="Center" Height="30" Margin="167,785,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="68" Background="#FF323232" Foreground="#FFBEBEBE"/>
+        <TextBox x:Name="PacketsPerSecondTextbox" HorizontalAlignment="Left" VerticalContentAlignment="Center" Height="30" Margin="167,820,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="68" Background="#FF323232" Foreground="#FFBEBEBE"/>
+        <Label x:Name="PacketsLabel_Copy" Content="Time (seconds):" HorizontalAlignment="Left" Height="30" Margin="34,785,0,0" VerticalContentAlignment="Center" Width="106" Foreground="#FFBEBEBE" VerticalAlignment="Top"/>
+        <Label x:Name="PacketsLabel_Copy1" Content="Packets per second:" HorizontalAlignment="Left" Height="30" Margin="34,820,0,0" VerticalContentAlignment="Center" Width="119" Foreground="#FFBEBEBE" VerticalAlignment="Top"/>
     </Grid>
 </Window>
